2013-10-17  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_soap_parlayx.c: changing namespace to use parlayx prefix
      in order to allow multi-service implementation in a single binary.
    * soap/env_[fault|header].h: using service independent SOAP header and
      fault struct processing, which is needed to support multi-services.
    * soap/env.c: dummy struct for undefined namespaces since we don't have
      them included directly from the service C sources.
    * soap/env.h: pre-processed by soapcpp2 to generate the service independent
      code base for the generic SOAP routines.
    * soap/Makefile.in: cleaning up the build process in order to allow adding
      more gsoap service implementations. Before this we got several clashes
      while building a multi-service binary.
      
2013-10-14 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: applied patch to reduce CPU load by logging.
      Thanks to Jacek Raczkiewicz <jacek.raczkiewicz at gmail.com> for this patch.

2013-10-02  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: add the /usr/local/share/gsoap default target in the
      gsoap detection.
      
2013-10-02  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: use grep -e rather then grep -P in the gsoap version
      pattern matching. The perl compatible grep may not be build in in various
      distribution.
    * soap/Makefile.in: use GSOAP_IMPORT include directory rather then using
      the system default location.
      
2013-09-26  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: add detecting openssl library path on more recent Debian
      based distributions, including Debian 7 and Ubuntu 13. They don't have
      symlinks for the libssl.so libcrypo.so in the standard directories, but
      rather use the machine specific path of the gcc library path. This will
      allow to detect the path and hence ensure openssl enabled builds are
      working out of the box on vanilla systems.
      